--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,10 @@ SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 virtualenv==20.34.0
 Werkzeug==3.1.3
-Flask
-Flask-Login
-Flask-Bcrypt
-Flask-SQLAlchemy
-gunicorn
+Flask==3.1.0
+Flask-Login==0.7.0
+SQLAlchemy==2.0.36
+
+
 
 
